# REACT-TYPESCRIPT-ESP32

./: README.md
Firmware_Webpage/: CMakeLists.txt  index.html  package-lock.json  package.json  vite.config.ts
Firmware_Webpage/src/: App.tsx
Firmware_Webpage/src/components/AccordionItem/: style.module.css
Firmware_Webpage/src/components/AccordionItemChild/: index.tsx  style.module.css
Firmware_Webpage/src/components/DefaultButton/: Style.module.css  index.tsx
Firmware_Webpage/src/components/Footer/: index.tsx
Firmware_Webpage/src/components/InputModal/: index.tsx
Firmware_Webpage/src/components/Logo/: index.tsx
Firmware_Webpage/src/components/Menu/: index.tsx
Firmware_Webpage/src/configs/ModalConfig/: index.tsx  style.module.css
Firmware_Webpage/src/page/HomeConfig/: index.tsx
Firmware_Webpage/src/pages/HomeConfig/: index.tsx
firmware/: CMakeLists.txt  partittions.csv  sdkconfig.old
firmware/main/: CMakeLists.txt  main.c
firmware/main/actuator/: ledActuator.c
firmware/main/embedded_files/: index.html
firmware/main/embedded_files/actuator/: ledActuator.c
firmware/main/embedded_files/assets/: index.css  index.js
firmware/main/includes/: ledConfig.h  server.h  wifi.h
firmware/main/includes/structs/: structData.h
firmware/main/utils/: extractReq.c
firmware/main/web/: server.c  wifi.c
firmware_webpage/: package.json  vite.config.ts
firmware_webpage/src/: App.tsx
firmware_webpage/src/model/: ValidationModel.ts
firmware_webpage/src/utils/: ValidationInputLogin.ts  ValidationInputWifi.ts
(+9 files in other folders)
